improve openapi doc
