# src/main/webui/src/gen/models/index.ts
@@ -10,7 +10,9 @@ export * from './activityDTO';
 export * from './activityDTOType';
 export * from './authRequest';
 export * from './authResponse';
+export * from './errorMessage';
 export * from './errorResponse';
+export * from './errorResponse1';
 export * from './localDateTime';
 export * from './loginResponse';
 export * from './role';
